Fix the layout issue on the main page

--- a/css/style.css
+++ b/css/style.css
@@ -188,9 +188,9 @@ img {
 }
 
 .project.area {
-  display: inline-block;
   padding: 2.75em 2.75em 2.75em 2.75em;
     text-align: center;
+    clear:both;
 }
 
 .projects.cover {
